# bruno-swarm

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-build.yml
deploy/: Dockerfile.ollama  docker-compose.yml  docker-entrypoint.sh  download-and-prepare.py
docs/: AI_AGENT_SWARM_RESEARCH.md  API.md
examples/: seven_agent_swarm.py  test_agent.py  three_agent_team.py
modelfiles/: Modelfile.backend  Modelfile.devops  Modelfile.docs  Modelfile.frontend  Modelfile.orchestrator  Modelfile.security  Modelfile.test
src/bruno_swarm/: __init__.py  cli.py  config.py  logging.py  tools.py  tui.py  tui.tcss  widgets.py
tests/: conftest.py  test_cli.py  test_config.py  test_tools.py  test_tui.py
