[project]
name = "bruno-swarm"
version = "0.1.0"
description = "Multi-agent AI developer swarm using abliterated models"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10,<3.13"
keywords = ["llm", "multi-agent", "swarm", "crewai", "abliteration", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.8",
    "rich>=14.1.0",
    "crewai>=0.86.0,<1.0",
    "huggingface-hub>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.8.0", "pytest-asyncio>=0.24.0"]
tui = ["textual>=0.89.0"]

[project.scripts]
bruno-swarm = "bruno_swarm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bruno_swarm"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
